@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
-    android:keyWidth="10%p"
+    android:keyWidth="100%p"
     android:horizontalGap="0px"
     android:verticalGap="0px"
-    android:keyHeight="50dip" >
+    android:keyHeight="30dip" >
     <Row>
-        <Key android:codes="-1" android:keyLabel="GTalkSMS by Yakoo" android:keyWidth="100%p"/>
-    </Row>        
+        <Key android:codes="0" android:keyLabel="GTalkSMS - Long press to switch" android:keyWidth="100%p"/>
+    </Row>
 </Keyboard>
